# FX-Order-Management

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
cmake/: ClangFormat.cmake  Keychain.cmake
include/: credentials.h  fx_exception.h  fx_main_utilities.hpp  fx_market_time.h  fx_order_management.h  fx_trading_model.h  fx_utilities.h  gain_capital_api.h  main_utilities.hpp  order_parameters.h  trading_model.h
interface_files/: active_order_management.json
lib/: libgain_capital_api.so.1  libgain_capital_api.so.1.1.0  libgain_capital_api.so.1.2.0  libgain_capital_api.so.2
src/: fx_exception.cpp  fx_market_time.cpp  fx_order_management.cpp  fx_trading_model.cpp  fx_utilities.cpp  trading_model.cpp
src/keychain/: keychain_linux.cpp  keychain_mac.cpp  keychain_win.cpp
test/: CMakeLists.txt  functional_test_failure_env.cpp  functional_test_production_env.cpp  unit_test.cpp  unit_test_market_time.cpp  unit_test_order_management.cpp  unit_test_utilities.cpp
test/test_files/test_settings2/: user_settings.json
